<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.scolarapp.MainActivity" >

    <TextView
        android:id="@+id/helloTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/helloTextView"
        android:layout_below="@+id/helloTextView"
        android:layout_marginTop="29dp"
        android:text="@string/verifyTextButton" />

    <Button
        android:id="@+id/myProfileButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="70dp"
        android:text="@string/profileTextButton" />

    <Button
        android:id="@+id/playMusicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/myProfileButton"
        android:layout_alignLeft="@+id/verifyButton"
        android:layout_marginBottom="89dp"
        android:text="@string/playTextButton" />

    <TextView
        android:id="@+id/coordinatesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/verifyButton"
        android:layout_below="@+id/verifyButton"
        android:layout_marginTop="17dp"
        android:text="@string/coordinatesStringTextView" />

    <TextView
        android:id="@+id/playTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/myProfileButton"
        android:layout_alignLeft="@+id/playMusicButton"
        android:layout_marginBottom="54dp"
        android:text="@string/playStringTextView" />

</RelativeLayout>
