<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.scolarapp.ConfigActivity" >

    <TextView
        android:id="@+id/NorthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/northStringTextView"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/SouthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NorthTextView"
        android:layout_centerVertical="true"
        android:text="@string/southStringTextView"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/NorthRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NorthTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/northSong1RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/song1StringRadioButton" />

        <RadioButton
            android:id="@+id/northSong2RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/song2StringRadioButton" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/SouthRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NorthRadioGroup"
        android:layout_below="@+id/SouthTextView"
        android:layout_marginTop="46dp"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/southSong1RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/song1StringRadioButton" />

        <RadioButton
            android:id="@+id/southSong2RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/song2StringRadioButton" />
    </RadioGroup>

    <Button
        android:id="@+id/storeSongButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/SouthRadioGroup"
        android:layout_marginBottom="23dp"
        android:text="@string/storeStringButton" />

</RelativeLayout>
